--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
+    "react-scratchcard": "^1.1.2",
+    "react-scratchcard-v2": "^1.1.1",
     "react-webcam": "^7.1.1",
     "yup": "^1.2.0"
   },
